# tuw_msgs-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/tuw_geo_msgs/: geo_json_feature_json.hpp  geo_point_json.hpp
include/tuw_geometry_msgs/: pose_json.hpp
include/tuw_msgs/: geo_point.hpp  geo_point_json.hpp
include/tuw_object_msgs/: shape.hpp  shape_array.hpp  shape_array_json.hpp
include/tuw_std_msgs/: parameter_array.hpp
msg/: ParameterArray.msg
rpm/: ros-humble-tuw-airskin-msgs.spec  ros-humble-tuw-geometry-msgs.spec  ros-humble-tuw-graph-msgs.spec  ros-humble-tuw-msgs.spec  ros-humble-tuw-multi-robot-msgs.spec  ros-humble-tuw-nav-msgs.spec  ros-humble-tuw-object-msgs.spec  ros-humble-tuw-std-msgs.spec  ros-jazzy-tuw-airskin-msgs.spec  ros-jazzy-tuw-geometry-msgs.spec  ros-jazzy-tuw-graph-msgs.spec  ros-jazzy-tuw-multi-robot-msgs.spec  ros-jazzy-tuw-nav-msgs.spec  ros-jazzy-tuw-object-msgs.spec  ros-jazzy-tuw-std-msgs.spec  ros-kinetic-tuw-airskin-msgs.spec  ros-kinetic-tuw-gazebo-msgs.spec  ros-kinetic-tuw-geometry-msgs.spec  ros-kinetic-tuw-msgs.spec  ros-kinetic-tuw-multi-robot-msgs.spec  ros-kinetic-tuw-nav-msgs.spec  ros-kinetic-tuw-object-msgs.spec  ros-kinetic-tuw-spline-msgs.spec  ros-kinetic-tuw-vehicle-msgs.spec  ros-melodic-tuw-airskin-msgs.spec  ros-melodic-tuw-gazebo-msgs.spec  ros-melodic-tuw-geometry-msgs.spec  ros-melodic-tuw-msgs.spec  ros-melodic-tuw-multi-robot-msgs.spec  ros-melodic-tuw-nav-msgs.spec  ros-melodic-tuw-object-msgs.spec  ros-melodic-tuw-vehicle-msgs.spec  ros-rolling-tuw-airskin-msgs.spec  ros-rolling-tuw-geometry-msgs.spec  ros-rolling-tuw-msgs.spec  ros-rolling-tuw-multi-robot-msgs.spec  ros-rolling-tuw-object-map-msgs.spec  ros-rolling-tuw-object-msgs.spec  template.spec
srv/: GetShapeArray.srv
tests/: test_parameter.cpp  test_shape.cpp
tuw_airskin_msgs/: CHANGELOG.rst
tuw_geo_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_geo_msgs/include/tuw_geo_msgs/: geo_point.hpp  geo_pose.hpp
tuw_geometry_msgs/: CHANGELOG.rst  CMakeLists.txt
tuw_geometry_msgs/include/tuw_geometry_msgs/: point_json.hpp
tuw_graph_msgs/: CHANGELOG.rst  package.xml
tuw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_multi_robot_msgs/: CHANGELOG.rst  package.xml
tuw_nav_msgs/: CHANGELOG.rst  package.xml
tuw_object_map_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_object_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_object_msgs/include/tuw_object_msgs/: shape_json.hpp
tuw_object_msgs/msg/: Shape.msg  ShapeArray.msg
tuw_std_msgs/: CHANGELOG.rst  CMakeLists.txt
tuw_std_msgs/include/tuw_std_msgs/: parameter.hpp  parameter_array_json.hpp  parameter_float64.hpp  parameter_float64_json.hpp  parameter_json.hpp
tuw_std_msgs/msg/: Parameter.msg
tuw_std_msgs/tests/: test_parameter_array.cpp
